src/objects/smagicinteract__Conversation_View_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to filter the incoming and outgoing messages&apos; records based on user selection</description>
    <fields>
        <fullName>smagicinteract__All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Default_Sender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Sender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner</label>
        <type>Checkbox</type>
    </fields>
    <label>Conversation View Setting</label>
</CustomObject>